# contracts

./: Prompt.md  README.md  flake.nix  pyproject.toml
examples/: __init__.py  company_resolver.py
src/contracts/: __init__.py  main.py
